--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -559,6 +559,7 @@ pre code {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  background-color: white;
 }
 
 @media (min-width: 576px) {
