--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -555,6 +555,7 @@ pre code {
 
 .container {
   width: 100%;
+  margin-top: 20px;
   padding-right: 15px;
   padding-left: 15px;
   margin-right: auto;
