--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6068,7 +6068,7 @@ button.bg-danger:focus {
 }
 
 .bg-light {
-  background-color: #f8f9fa !important;
+  background-color: #E5E5E5 !important;
 }
 
 a.bg-light:hover, a.bg-light:focus,
