--- a/css/style.css
+++ b/css/style.css
@@ -55,3 +55,30 @@ body{
 figure{
 	display: inline-block;
 }
+.tabellvitfet {	
+	font-family: Helvetica;
+	font-size: 11px;
+	font-style: normal;
+	line-height: 14px;
+	color: #FFFFFF;
+	font-weight: bold;
+}
+.tabellvit{	
+	font-family: Helvetica;
+	font-size: 11px;
+	font-style: normal;
+	line-height: 14px;
+	color: #FFFFFF;
+}
+.tabellredfet{
+	font-family: Helvetica;
+	font-size: 11px;
+	font-style: normal;
+	line-height: 14px;
+	color: #FFFFFF;
+	font-weight: bold;
+	color: red;
+}
+.pmarg{
+	margin:0px;
+}
